[package]
name = "waveview"
default-run = "waveview"
version = "0.1.0"
authors = ["Christopher Chalmers <c.chalmers@me.com>"]
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "waveview"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.28.0" # Gives us egui, epi and web+native backends
epaint = "0.28.0" # Just the painting code
ehttp = "*"
color-eyre = "*"
vcd = "0.7"
itertools = "*"
indexmap = "*"
log = "*"
rfd = "*"
futures = { version = "*", features = ["executor"] }
tracing = "*"
tracing-subscriber = "*"
clap = { version = "4.5", features = [ "derive" ] }

serde = { version = "1", features = ["derive"], optional = true }

egui_dnd = "0.9.0"
egui_plot = "0.28.0"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

# [profile.release]
# opt-level = 2 # fast and small wasm

# [patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "*"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "Location",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
